fix spacing on add movie screen

--- a/src/App.css
+++ b/src/App.css
@@ -108,16 +108,15 @@ p {
   width: 65px;
 }
 
-#add-movie-screen {
-  height: 100vh;
-}
-
 .create-form {
   display: flex;
   flex-direction: column;
   width: 50%;
+  height: 75vh;
   align-items: flex-start;
   margin: 0 auto;
+  margin-top: -20px;
+  justify-content: space-evenly;
 }
 
 .create-form-input:focus, .update-form-input:focus {
@@ -125,7 +124,8 @@ p {
 }
 
 #add-movie-submit {
-  margin: 0 auto;
+  align-self: flex-end;
+  height: 28px;
 }
 
 [tabIndex] {
